force-app/main/default/objects/Account/fields/ACCOUNT_MEMBERSHIP_UPDATE__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_MEMBERSHIP_UPDATE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACCOUNT MEMBERSHIP UPDATE</label>
    <type>Checkbox</type>
</CustomField>