force-app/main/default/objects/Account/fields/Artist_Foundry_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Artist_Foundry_Expiration_Date__c</fullName>
    <label>Artist Foundry- Resident Expiration Date</label>
    <type>Date</type>
</CustomField>