force-app/main/default/objects/Account/fields/Artist_Foundry_Notes_and_Comments__c.field-meta.xml
<CustomField>
    <fullName>Artist_Foundry_Notes_and_Comments__c</fullName>
    <label>Artist Foundry Resident- Notes</label>
    <type>TextArea</type>
</CustomField>