force-app/main/default/objects/Account/fields/Artist_Foundry_Residences__c.field-meta.xml
<CustomField>
    <fullName>Artist_Foundry_Residences__c</fullName>
    <label>Artist Foundry - Resident Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month to Month Resident</fullName>
            </value>
            <value>
                <fullName>Year-in-Full Resident</fullName>
            </value>
            <value>
                <fullName>Private Office Resident</fullName>
            </value>
            <value>
                <fullName>Private Desk Resident</fullName>
            </value>
            <value>
                <fullName>Award Winner Resident</fullName>
            </value>
            <value>
                <fullName>Team Discount Resident</fullName>
            </value>
            <value>
                <fullName>Equipment Trade Resident</fullName>
            </value>
            <value>
                <fullName>Workshop Leader Resident</fullName>
            </value>
            <value>
                <fullName>Employee / Host Resident</fullName>
            </value>
            <value>
                <fullName>Other Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>