force-app/main/default/objects/Account/fields/Artist_Foundry_Resident_Status__c.field-meta.xml
<CustomField>
    <fullName>Artist_Foundry_Resident_Status__c</fullName>
    <label>Artist Foundry - Resident Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>