force-app/main/default/objects/Account/fields/Attended_School_Screening_2012__c.field-meta.xml
<CustomField>
    <fullName>Attended_School_Screening_2012__c</fullName>
    <label>Attended School Screening 2012</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3/21-9:30AM Circus Dreams</fullName>
            </value>
            <value>
                <fullName>3/22-9:30AM Circus Dreams</fullName>
            </value>
            <value>
                <fullName>3/22-1:00PM Circus Dreams</fullName>
            </value>
            <value>
                <fullName>3/22-1:00PM Louder Than a Bomb - PC</fullName>
            </value>
            <value>
                <fullName>3/23-9:30AM Circus Dreams</fullName>
            </value>
            <value>
                <fullName>3/23-1:00PM Louder Than a Bomb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>