force-app/main/default/objects/Account/fields/Attended_school_screening_2014__c.field-meta.xml
<CustomField>
    <fullName>Attended_school_screening_2014__c</fullName>
    <label>Attended school screening 2014</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BULLY - 9/11/13 - 10:00am</fullName>
            </value>
            <value>
                <fullName>BULLY - 9/25/13 - 10:00am</fullName>
            </value>
            <value>
                <fullName>BULLY - 9/26/13 - 10:00am</fullName>
            </value>
            <value>
                <fullName>BULLY - 10/2/13 - 10:00am</fullName>
            </value>
            <value>
                <fullName>BULLY - 10/7/13 - 10:00 am</fullName>
            </value>
            <value>
                <fullName>BULLY - 10/11/13 - 10:00am</fullName>
            </value>
            <value>
                <fullName>BULLY - 12/3/13 - 10:00AM</fullName>
            </value>
            <value>
                <fullName>SHAKESPEARE HIGH - 2/11/14 - 3:00pm</fullName>
            </value>
            <value>
                <fullName>THE WHALE -3/14/14 - 1:00pm</fullName>
            </value>
            <value>
                <fullName>GATTU - 4/3/14 - 9:15am</fullName>
            </value>
            <value>
                <fullName>THE WHALE - 4/23/14 9:15am</fullName>
            </value>
            <value>
                <fullName>WINGS OF LIFE - 4/25/14 - 1:00pm</fullName>
            </value>
            <value>
                <fullName>WINGS OF LIFE - 4/29/14 - 9:15am</fullName>
            </value>
            <value>
                <fullName>FELIX - 5/19/14 - 1:00 pm</fullName>
            </value>
            <value>
                <fullName>I LEARN AMERICA - 5/21/14 - 9:30am</fullName>
            </value>
            <value>
                <fullName>THE WHALE - 5/23/14 - 9:45am</fullName>
            </value>
            <value>
                <fullName>THE WHALE - 5/27/14 11:00am</fullName>
            </value>
            <value>
                <fullName>WINGS OF LIFE - 5/27/14 9:30am</fullName>
            </value>
            <value>
                <fullName>WINGS OF LIFE - 6/2/2014 9:30am</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>