force-app/main/default/objects/Account/fields/C_P_Recurring_Donations__c.field-meta.xml
<CustomField>
    <fullName>C_P_Recurring_Donations__c</fullName>
    <label>C&amp;P Recurring Donations Status</label>
    <length>120</length>
    <type>Text</type>
</CustomField>