force-app/main/default/objects/Account/fields/CnP_PaaS__CnP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Account_Number__c</fullName>
    <label>C&amp;P Account Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>