force-app/main/default/objects/Account/fields/CnP_PaaS__CnP_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Company_ID__c</fullName>
    <externalId>true</externalId>
    <label>C&amp;P Company ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>