force-app/main/default/objects/Account/fields/Dual_Immersion__c.field-meta.xml
<CustomField>
    <fullName>Dual_Immersion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>School offers Dual Immersion programs</description>
    <inlineHelpText>School offers Dual Immersion programs</inlineHelpText>
    <label>Dual Immersion</label>
    <type>Checkbox</type>
</CustomField>