force-app/main/default/objects/Account/fields/Inclination__c.field-meta.xml
<CustomField>
    <fullName>Inclination__c</fullName>
    <label>Inclination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - Unknown</fullName>
            </value>
            <value>
                <fullName>1 - Identification</fullName>
            </value>
            <value>
                <fullName>2 - Research</fullName>
            </value>
            <value>
                <fullName>3 - Strategy</fullName>
            </value>
            <value>
                <fullName>4 - Cultivation</fullName>
            </value>
            <value>
                <fullName>5 - Stewardship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>