force-app/main/default/objects/Account/fields/Interests__c.field-meta.xml
<CustomField>
    <fullName>Interests__c</fullName>
    <label>Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aging/Senior Issues</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Art/Architecture/Design/Fine Art</fullName>
            </value>
            <value>
                <fullName>Bookclub</fullName>
            </value>
            <value>
                <fullName>Capital Campaign</fullName>
            </value>
            <value>
                <fullName>Children&apos;s List</fullName>
            </value>
            <value>
                <fullName>Creativity in Focus</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>DTH!</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Environment/Sustainability</fullName>
            </value>
            <value>
                <fullName>Films on Film</fullName>
            </value>
            <value>
                <fullName>Film Studies</fullName>
            </value>
            <value>
                <fullName>Films Without Borders</fullName>
            </value>
            <value>
                <fullName>Gala</fullName>
            </value>
            <value>
                <fullName>Garden Party</fullName>
            </value>
            <value>
                <fullName>General/All Films</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Homelessness</fullName>
            </value>
            <value>
                <fullName>Humanities</fullName>
            </value>
            <value>
                <fullName>Human Rights</fullName>
            </value>
            <value>
                <fullName>Immigration</fullName>
            </value>
            <value>
                <fullName>Jewish Programming</fullName>
            </value>
            <value>
                <fullName>Law/Justice</fullName>
            </value>
            <value>
                <fullName>Logan</fullName>
            </value>
            <value>
                <fullName>Moab</fullName>
            </value>
            <value>
                <fullName>Ogden</fullName>
            </value>
            <value>
                <fullName>Orem</fullName>
            </value>
            <value>
                <fullName>PEEK Award</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>