force-app/main/default/objects/Account/fields/Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>Membership_Level__c</fullName>
    <label>Membership Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>