force-app/main/default/objects/Account/fields/Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status__c</fullName>
    <label>Membership Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>