force-app/main/default/objects/Account/fields/NGOC_Next_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>NGOC_Next_Payment_Date__c</fullName>
    <inlineHelpText>use for reference only (temporary). we didn&apos;t migrate future unpaid recurring installments, so this date tells you the next pending installment date at the time of migration</inlineHelpText>
    <label>NGOC Next Payment Date</label>
    <type>Date</type>
</CustomField>