force-app/main/default/objects/Account/fields/NGOC_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>NGOC_SF_ID__c</fullName>
    <inlineHelpText>Legacy Id from NGOC</inlineHelpText>
    <label>NGOC_SF_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>