force-app/main/default/objects/Account/fields/Outreach_Partner__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outreach Partner</label>
    <type>Checkbox</type>
</CustomField>