force-app/main/default/objects/Account/fields/Pledge_Test__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Test__c</fullName>
    <description>Test for pledge roll up</description>
    <label>Pledge_Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>