force-app/main/default/objects/Account/fields/Pops_Area__c.field-meta.xml
<CustomField>
    <fullName>Pops_Area__c</fullName>
    <description>POPS Map Area</description>
    <inlineHelpText>View map here: https://www.utahfilmcenter.org/wp/wp-content/uploads/2021/02/POPS-area-map.png</inlineHelpText>
    <label>POPS Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
                <color>#B6E32E</color>
                <label>Home</label>
            </value>
            <value>
                <fullName>1</fullName>
                <color>#33CCFF</color>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <color>#FFFF66</color>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <color>#FF9966</color>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <color>#DDDDDD</color>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <color>#CC66CC</color>
                <label>5</label>
            </value>
            <value>
                <fullName>6</fullName>
                <color>#FF0000</color>
                <label>6</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>