force-app/main/default/objects/Account/fields/Postal_Mail_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Postal_Mail_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Postal Mail Opt Out</label>
    <type>Checkbox</type>
</CustomField>