force-app/main/default/objects/Account/fields/Primary_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_ID__c</fullName>
    <formula>npe01__One2OneContact__r.Id</formula>
    <label>Primary Contact ID</label>
    <type>Text</type>
</CustomField>