force-app/main/default/objects/Account/fields/Readiness__c.field-meta.xml
<CustomField>
    <fullName>Readiness__c</fullName>
    <label>Readiness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - 6 months until solicitation</fullName>
            </value>
            <value>
                <fullName>6 - 12 months until solicitation</fullName>
            </value>
            <value>
                <fullName>12+ months until solicitation</fullName>
            </value>
            <value>
                <fullName>No timeline for readiness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>