force-app/main/default/objects/Account/fields/Received_Vouchers_2012__c.field-meta.xml
<CustomField>
    <fullName>Received_Vouchers_2012__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received Vouchers 2012</label>
    <type>Checkbox</type>
</CustomField>