force-app/main/default/objects/Account/fields/Salt_County_Council_Districts__c.field-meta.xml
<CustomField>
    <fullName>Salt_County_Council_Districts__c</fullName>
    <label>Salt Lake County Council District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Large A</fullName>
            </value>
            <value>
                <fullName>At Large B</fullName>
            </value>
            <value>
                <fullName>At Large C</fullName>
            </value>
            <value>
                <fullName>District 1</fullName>
            </value>
            <value>
                <fullName>District 2</fullName>
            </value>
            <value>
                <fullName>District 3</fullName>
            </value>
            <value>
                <fullName>District 5</fullName>
            </value>
            <value>
                <fullName>District 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>