force-app/main/default/objects/Account/fields/School_District__c.field-meta.xml
<CustomField>
    <fullName>School_District__c</fullName>
    <description>Use Account Name and Parent Account hierarchy</description>
    <label>xxSchool District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>