force-app/main/default/objects/Account/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <description>Use Account Name instead</description>
    <label>xxSchool Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>