force-app/main/default/objects/Account/fields/Soft_Credit_Number_of_Gifts_Account__c.field-meta.xml
<CustomField>
    <fullName>Soft_Credit_Number_of_Gifts_Account__c</fullName>
    <description>The total number of soft credit.</description>
    <inlineHelpText>The total number of soft credit.</inlineHelpText>
    <label>Soft Credit Number of Gifts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>