force-app/main/default/objects/Account/fields/Soft_Credit_Total_Account__c.field-meta.xml
<CustomField>
    <fullName>Soft_Credit_Total_Account__c</fullName>
    <label>Soft Credit Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>