force-app/main/default/objects/Account/fields/Target_Ask_Amount__c.field-meta.xml
<CustomField>
    <fullName>Target_Ask_Amount__c</fullName>
    <label>Target Ask Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>