force-app/main/default/objects/Account/fields/Title_I_School__c.field-meta.xml
<CustomField>
    <fullName>Title_I_School__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this school Title I ?</description>
    <inlineHelpText>Is this school Title I ?</inlineHelpText>
    <label>Title I School</label>
    <type>Checkbox</type>
</CustomField>