force-app/main/default/objects/Account/listViews/Active_Members.listView-meta.xml
<ListView>
    <fullName>Active_Members</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Membership_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Membership_Status__c</field>
        <operation>contains</operation>
        <value>Active</value>
    </filters>
    <label>Active Members</label>
</ListView>