force-app/main/default/objects/Account/listViews/Education_Title_1_School_update_view.listView-meta.xml
<ListView>
    <fullName>Education_Title_1_School_update_view</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Title_I_School__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Organization</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Education</value>
    </filters>
    <label>Education Title 1 School update view</label>
</ListView>