force-app/main/default/objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>npe01__One2OneContact__c</columns>
    <columns>Primary_Contact_Email__c</columns>
    <columns>Soft_Credit_Total_Account__c</columns>
    <columns>npo02__TotalOppAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Account_Hierarchy</label>
</ListView>